--- a/views/play.ejs
+++ b/views/play.ejs
@@ -120,10 +120,17 @@
           for(var i = 0; i < areamap.length; i++) {
               var x = i % AREA_WIDTH;
               var y = (i - x) / AREA_HEIGHT;
+              var img1 = new Image();
+              var img2 = new Image();
+              //modify here for different terrain 
+              img1.src = "/images/ForestFloor.png";
+              img2.src = "/images/ForestWall.png";
+              var floor = ctx.createPattern(img1,"repeat");
+              var wall = ctx.createPattern(img2,"repeat");
               if (areamap[i] == 'A') {
-                ctx.fillStyle = "#71cf90";
+                ctx.fillStyle = floor;
               } else if (areamap[i] == 'B') {
-                ctx.fillStyle = "#c5c678";
+                ctx.fillStyle = wall;
               } else if (areamap[i] == 'C') {
                 ctx.fillStyle = "#7b5b46";
               }
