--- a/views/battlescreen.ejs
+++ b/views/battlescreen.ejs
@@ -187,6 +187,7 @@
     defending = false;
     var battleDice = Math.floor((Math.random() * 15) + 1);
     if (battleDice > 5) {
+      display("You hit the monster.");
       character.current_monster_health = character.current_monster_health + monster.physical_defense - character.physical_attack;
       if (character.current_monster_health > 0) {
         var h = character.current_monster_health;
@@ -268,10 +269,6 @@
     return false;
   });
 
-  $('#button-attack').click(function() {
-    attack();
-    return false;
-  });
 
   $('#button-defend').click(function() {
     defend();
