--- a/views/battlescreen.ejs
+++ b/views/battlescreen.ejs
@@ -10,9 +10,9 @@
     var socket = io.connect('/');
 
     socket.on('disconnect', function() {
-      // destroy monster
       // alert("The battle ended because you disconnected.");
     });
+
     monster = {name: ""};
     
     socket.on('getbattlers', function(data) {
@@ -47,6 +47,7 @@
       <div id="ally" style="width:33%;float:center;">
         <p>
           <div id="allyname"></div><br />
+          <div id="allylevel"></div>
           <div id="allyhp"></div>
           <div id="allymp"></div>
         </p>
@@ -147,10 +148,12 @@
   /* Update player/monster info. */
   function updateBattleInfo() {
     $('#allyname').html("<b><%= character.name %></b>");
+    // $('#allylevel').html("Level: <%= character.level %>, EXP: <%= character.experience %> / 100");
     $('#allyhp').html("HP: <%= character.current_health_points %> / <%= character.health_points %>");
     $('#allymp').html("MP: <%= character.current_magic_points %> / <%= character.magic_points %>");
     $('#enemyname').html("<b><%= monster.name %></b>");
-    $('#enemyhp').html("Dodge Rate: 50%");
+    $('#enemyhp').html("HP: <%= character.current_monster_health %> / <%= monster.health_points %>");
+    $('#enemymp').html("MP: <%= character.current_monster_magic %> / <%= monster.magic_points %>");
   }
   
   /* Increment the turn counter by numTurns. */
@@ -166,11 +169,15 @@
       if (defending) {
         display("The enemy attacks... but you were defending so it doesn't do any damage.");
       } else {
-        display("It's now the enemy's turn. The enemy attacks you...");
-        character.current_health_points = character.current_health_points + character.physical_defense - monster.physical_attack;
+        var damage = monster.physical_attack - character.physical_defense;
+        if (damage < 0) {
+          damage = 0;
+        }
+        character.current_health_points -= damage;
         var h = character.current_health_points;
         var s = h.toString();
-        $('#allyhp').html(s.concat("/ <%= character.health_points %> HP"));
+        $('#allyhp').html("HP: " + s.concat("/ <%= character.health_points %>"));
+        display("It's now the enemy's turn. The enemy attacks you for " + damage + " damage...");
       }
       showNextMenu('continue');
     } else if (actor == ENEMY_TURN) {
@@ -185,16 +192,21 @@
    * The attacker and attackee must be characters or enemies. */
   function attack(attacker, attackee) {
     defending = false;
-    var battleDice = Math.floor((Math.random() * 15) + 1);
+    var battleDice = Math.floor((Math.random() * 20) + 1);
     if (battleDice > 5) {
-      display("You hit the monster.");
-      character.current_monster_health = character.current_monster_health + monster.physical_defense - character.physical_attack;
+      var damage = character.physical_attack - monster.physical_defense;
+      if (damage < 0) {
+        damage = 0;
+      }
+      character.current_monster_health -= damage;
+      display("You hit the monster for " + damage + " damage!");
       if (character.current_monster_health > 0) {
         var h = character.current_monster_health;
         var s = h.toString();
-        $('#enemyhp').html(s.concat("/ 50 HP")); 
+        $('#enemyhp').html("HP: " + s.concat("/ <%= monster.health_points %>")); 
         showNextMenu('continue');
       } else {
+        character.current_monster_health = 0;
         kill();
       }
     } else if (battleDice == 5) {
@@ -235,9 +247,22 @@
   }
 
   function kill(killer, killee) {
+    /*post('/update_experience', { cid: character.id }, function(err, res) {
+      var cumulExperience = character.experience + monster.experience;
+      var levelIncrease = Math.floor(cumulExperience / 100);
+      var newExperience = cumulExperience % 100;
+      var newLevel = character.level + levelIncrease;
+      character.level = newLevel;
+      character.experience = newExperience;
+    });*/
     totalEXPGained += 0;
-    $('#enemyhp').html("HP: 0 / 50");
+    // $('#allylevel').html(res.newLevel + "Level: <%= character.level %>, EXP: <%= character.experience %> / 100");
+
+    var h = character.current_monster_health;
+    var s = h.toString();
+    $('#enemyhp').html("HP: " + s.concat("/ <%= monster.health_points %>")); 
     display("You've slain the enemy!");
+
     showNextMenu('end');
   }
 
@@ -268,7 +293,6 @@
     finishBattle();
     return false;
   });
-
 
   $('#button-defend').click(function() {
     defend();
