--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -9,9 +9,9 @@
   <body>
   <center>
   <h1>A NEW MMO</h1>
-  <div id="login" style="width:300px;height:200px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid blue;background-color:lightgreen;" class="box">
+  <div id="login" style="width:300px;height:250px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid blue;background-color:lightgreen;" class="box">
     <center>
-    <div id="logintext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid blue;background-color:skyblue" class="message"><b>Please login or register to play!</b></div>
+    <b><div id="logintext" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid blue;background-color:skyblue" class="message">Please login or register to play! Username and password should be 1 to 16 characters long.</div></b>
     <form>
     Username: <input type="text" id=username></br>
     Password: <input type="password" id=password></br>
