--- a/lib/views/battlescreen.ejs
+++ b/lib/views/battlescreen.ejs
@@ -22,62 +22,77 @@
       // character.current_monster_magic = monster.magic_points;
     });
 
+    socket.on('getmap', function(data) {
+        areamap = data.areamap;
+        should_render = true;
+    });
+
     socket.emit('getbattlers', {});
+    socket.emit('getmap', {});
   </script>
 </head>
 
 <body>
 <center>
-  <div id="battle" style="width:500px;padding:5px 5px 5px 5px;margin:5px 5px 5px 5px;border:5px solid black;background-color:gray;" class="box">
-    <center>
     <!-- Battle timer information -->
-    <div id="timer" style="width:75px;margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:tan;" class="box">
+    <div id="timer" style="width:75px;padding:5px 0px 5px 0px;border:1px solid black;background-color:tan;" class="box">
       Turn 0
     </div>
-    <!-- Enemy information -->
-    <div id="enemybox" style="min-height:150px;margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:gold;" class="box">
-      <div id="enemy" style="width:40%;float:center">
-        <p>
-          <div id="enemyname"></div><br />
-          <div id="enemyhp"></div>
-        </p>
-      </div>
-    </div>
-    <!-- Ally information -->
-    <div id="allybox" style="min-height:150px;margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:gold;" class="box">
-      <div id="ally" style="width:40%;float:center;">
-        <p>
-          <div id="allyname"></div><br />
-          <div id="allylevel"></div>
-          <div id="allyhp"></div>
-          <div id="allymp"></div>
-        </p>
-      </div>
-    </div>
+    <canvas id="myCanvas" width="500" height="225" style="overflow:hidden;border:1px solid #c3c3c3;">
+    Your browser does not support the HTML5 canvas tag.
+    </canvas>
     <!-- Textbox displaying messages -->
-    <div id="textbox" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:tan;" class="box">...</div>
+    <div id="textbox" style="width:500px;padding:5px 0px 5px 0px;border:1px solid black;background-color:tan;" class="box">...</div>
     <!-- Battle command menu -->
-    <div id="actions" style="margin:5px 5px 5px 5px;padding:5px 5px 5px 5px;border:5px solid black;background-color:tan;" class="box">
+    <div id="commands" style="width:500px;height:300px;" class="box">
+    <div id="players" style="width:40%;height:100%;border:1px solid black;float:left;">
+       <div id="allyname" style="height:25%;float:center;">
+       </div>
+       <div id="allylevel" style="height:25%;float:center;">
+       </div>
+       <div id="allyhp" style="height:25%;float:center;">
+       </div>
+       <div id="allymp" style="height:25%;float:center;">
+       </div>
+    </div>
+    <div id="battleCommands" style="width:18.8%;height:100%;border:1px solid black;float:left;">
+        <div id="attack" style="height:33%;float:center">
+        <input id="button-attack" type="button" value="Attack" onclick="attack(character, monster);">
+        </div>
+        <!--
+        <div id="skills" style="height:20%">
+        Skills
+        </div>
+        <div id="items" style="height:20%">
+        Items
+        </div>
+        -->
+        <div id="defend" style="height:33%;float:center">
+        <input id="button-defend" type="button" value="Defend" onclick="defend(character);">
+        </div>
+        <div id="flee" style="height:33%;float:center">
+        <input id="button-flee" type="button" value="Flee">
+        </div>
+    </div>
+    <div id="enemies" style="width:40%;height:100%;border:1px solid black;float:left;">
+        <div id="enemyname" style="height:50%;float:center;">
+         </div>
+         <div id="enemyhp" style="height:50%;float:center;">
+         </div>
+    </div>
+    </div>
+    <div id="actions" style="padding:5px 0px 5px 0px;border:1px solid black;background-color:tan;" class="box">
       <input id="button-next-continue" type="button" value="Next" onclick="next('continue');">
       <input id="button-next-end" type="button" value="Next" onclick="next('end');">
-      <input id="button-attack" type="button" value="Attack" onclick="attack(character, monster);">
-      <input id="button-defend" type="button" value="Defend" onclick="defend(character);">
-      <input id="button-flee" type="button" value="Flee">
       <input id="button-overworld" type="button" value="Return to Overworld" onclick="switchToOverworld();">
       <!--<input id="button-logout" type="button" value="Logout" onclick="window.location.href ='/logout';">-->
     </div>
-    </center>
-  </div>
 </center>
 
 <script>
   /* Initially hide all buttons. */
-  $('#button-next-continue').hide();
-  $('#button-next-end').hide();
-  $('#button-attack').hide();
-  $('#button-defend').hide();
-  $('#button-flee').hide();
-  $('#button-overworld').hide();
+  $('#actions').hide();
+  $('#commands').hide();
 
   /* Upon page load. */
   $(document).ready(function() {
@@ -94,10 +109,70 @@
   var ally = <%= character.id %>;
   var enemy = <%= monster.id %>;
 
+  var should_render;
+
+  var c = document.getElementById("myCanvas");
+  var ctx = c.getContext("2d");
+
+  var AREA_WIDTH = 20; // x-dimension size
+  var AREA_HEIGHT = 9; // y-dimension size
+  var TILE_SIZE = 25; // side of a single area tile
+
+  var areamap = "";
+
+  var render = function() {
+        if (should_render) {
+          ctx.clearRect(0, 0, TILE_SIZE * AREA_WIDTH, TILE_SIZE * AREA_HEIGHT);
+
+          var img1 = new Image();
+
+          //Terrain Choice
+          if (areamap[0] == 'F') { 
+            img1.src = "/images/ForestFloor.png";
+          } else if (areamap[0] == 'M') {
+            img1.src = "/images/MountainFloor.png";
+          }
+          var floor = ctx.createPattern(img1,"repeat");
+                
+          // Draw the area's terrain
+          for(var i = 0; i < 180; i++) {
+              var x = i % AREA_WIDTH;
+              var y = (i - x) / AREA_WIDTH;
+
+              ctx.fillStyle = floor;
+              ctx.fillRect(x * TILE_SIZE, y * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+          }
+
+          // Draw currently logged-in character
+          ctx.fillStyle = "#CC0000";
+          ctx.fillRect(4 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+
+          // Draw monster
+          ctx.fillStyle = "#000000";
+          ctx.fillRect(15 * TILE_SIZE, 4 * TILE_SIZE, TILE_SIZE, TILE_SIZE);
+          
+
+          // Draw the area's grid
+          for (var x = 0; x <= AREA_WIDTH * TILE_SIZE; x += TILE_SIZE) {
+              ctx.moveTo(x, 0);
+              ctx.lineTo(x, AREA_HEIGHT * TILE_SIZE);
+          }
+          for (var y = 0; y <= AREA_HEIGHT * TILE_SIZE; y += TILE_SIZE) {
+              ctx.moveTo(0, y);
+              ctx.lineTo(AREA_WIDTH * TILE_SIZE, y);
+          }
+          ctx.strokeStyle = "black";
+          ctx.stroke();
+
+          should_render = false;
+        }
+      };
+
+  setInterval(render, 1);
+
   function showNextMenu(type) {
-    $('#button-attack').hide();
-    $('#button-defend').hide();
-    $('#button-flee').hide();
+    $('#commands').hide();
+    $('#actions').show();
     $('#button-overworld').hide();
     if (type == 'continue') {
       $('#button-next-end').hide();
@@ -112,20 +187,15 @@
   }
 
   function showCommandMenu() {
-    $('#button-next-continue').hide();
-    $('#button-next-end').hide();
-    $('#button-overworld').hide();
-    $('#button-attack').show();
-    $('#button-defend').show();
-    $('#button-flee').show();
+    $('#actions').hide();
+    $('#commands').show();
   }
 
   function showEndMenu() {
+    $('#commands').hide();
+    $('#actions').show();
     $('#button-next-continue').hide();
     $('#button-next-end').hide();
-    $('#button-attack').hide();
-    $('#button-defend').hide();
-    $('#button-flee').hide();
     $('#button-overworld').show();
   }
   
