--- a/lib/views/play.ejs
+++ b/lib/views/play.ejs
@@ -94,7 +94,7 @@
           newloc: areaname
       };
 
-      var should_render = true;
+      var should_render;
       var keysDown = {};
       
       //Character information
@@ -200,7 +200,7 @@
           // Draw the area's terrain
           for(var i = 0; i < areamap.length-1; i++) {
               var x = i % AREA_WIDTH;
-              var y = (i - x) / AREA_HEIGHT;
+              var y = (i - x) / AREA_WIDTH;
 
               if (areamap[i+1] == 'A') {
                 ctx.fillStyle = floor;
